[package]
name = "kanha"
version = "0.1.0"
edition = "2021"
authors = [ "PwnWriter < hey@pwnwriter.xyz >" ]
description = "🦚 Compile once, Hack forever"
readme = "README.md"
repository = "https://github.com/pwnwriter/kanha"
homepage = "https://github.com/pwnwriter/kanha.git"
license = "MIT"
keywords = ["Playground", "kanha", "rust-lang"]
categories = ["accessibility", "web-programming", "command-line" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive", "string"] }
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.29.1", features = ["full"] }  
serde = { version = "1.0.175", features = ["derive"] }
colored = "2.0.4"
rand = "0.8.5"
futures = "0.3.28"
lazy_static = "1.4.0"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
