[package]
name = "kanha"
version = "0.1.2"
edition = "2021"
authors = [ "PwnWriter < hey@pwnwriter.xyz >" ]
description = "🦚 Compile once, Hack forever"
readme = "README.md"
repository = "https://github.com/pwnwriter/kanha"
homepage = "https://github.com/pwnwriter/kanha.git"
license = "MIT"
keywords = ["recon", "red_teaming", "pentesting", "osint"]
categories = ["accessibility", "web-programming", "command-line" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive", "string"] }
reqwest = { version = "0.11.20", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.33.0", features = ["full"] }  
serde = { version = "1.0.192", features = ["derive"] }
colored = "2.0.4"
futures = "0.3.28"
lazy_static = "1.4.0"
dns-lookup = "2.0.4"
serde_json = "1.0.107"
urlencoding = "2.1.3"
anyhow = "1.0.75"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false

